--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.21.2",
-        "node-cron": "^4.2.1"
+        "node-cron": "^4.2.1",
+        "stripe": "^20.1.2"
     }
 }
